Fix spacing

--- a/assets/styles.scss
+++ b/assets/styles.scss
@@ -487,7 +487,7 @@ $timeline-item-card-radius: 8px;
 
 @media screen and (max-width: 39.9375em) {
     .timeline {
-        margin: 30px;
+        margin: 0;
         padding: 0;
         width: 92%;
 
